# aoc2024.rs

./: .gitignore  Cargo.toml  flake.nix  rust-toolchain.toml
src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.hs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day17.ua  graph.rs  grid.rs  main.rs  util.rs
